muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-clip.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "a",
                    sub_components: [],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "svg",
                    sub_components: [],
                },
                uri: "http://www.w3.org/2000/svg",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Include(
                        Include {
                            uri: "svg-basic-clip.rnc",
                            inherit: Some(
                                Inherit {
                                    prefix: Identifier {
                                        component: "svg",
                                        sub_components: [],
                                    },
                                },
                            ),
                            contents: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "clipPath",
                                    "class",
                                ],
                            },
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Shape",
                                                    "class",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Text",
                                                    "class",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
