muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__svg11__svg-cursor.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            DefaultNamespaceDeclaration {
                prefix: None,
                uri: "http://www.w3.org/2000/svg",
            },
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: Identifier {
                    component: "a",
                    sub_components: [],
                },
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                contents: [
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "CursorValue",
                                sub_components: [
                                    "datatype",
                                ],
                            },
                            combine: None,
                            pattern: Data {
                                name: Name(
                                    Name {
                                        prefix: Some(
                                            Identifier {
                                                component: "xsd",
                                                sub_components: [],
                                            },
                                        ),
                                        local: Identifier {
                                            component: "string",
                                            sub_components: [],
                                        },
                                    },
                                ),
                                parameters: [],
                                except: None,
                            },
                        },
                    ),
                    Annotation(
                        AnnotationElement {
                            name: Name {
                                prefix: Some(
                                    Identifier {
                                        component: "a",
                                        sub_components: [],
                                    },
                                ),
                                local: Identifier {
                                    component: "documentation",
                                    sub_components: [],
                                },
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Cursor",
                                    "extra",
                                    "attrib",
                                ],
                            },
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Cursor",
                                    "attrib",
                                ],
                            },
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "cursor",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "CursorValue",
                                                        sub_components: [
                                                            "datatype",
                                                        ],
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Cursor",
                                                    "extra",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        AnnotationElement {
                            name: Name {
                                prefix: Some(
                                    Identifier {
                                        component: "a",
                                        sub_components: [],
                                    },
                                ),
                                local: Identifier {
                                    component: "documentation",
                                    sub_components: [],
                                },
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Cursor",
                                    "extra",
                                    "class",
                                ],
                            },
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "Cursor",
                                    "class",
                                ],
                            },
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "cursor",
                                                sub_components: [],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Cursor",
                                                    "extra",
                                                    "class",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        AnnotationElement {
                            name: Name {
                                prefix: Some(
                                    Identifier {
                                        component: "a",
                                        sub_components: [],
                                    },
                                ),
                                local: Identifier {
                                    component: "documentation",
                                    sub_components: [],
                                },
                            },
                            attributes: [],
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "SVG",
                                sub_components: [
                                    "cursor",
                                    "content",
                                ],
                            },
                            combine: None,
                            pattern: Many0(
                                Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "SVG",
                                            sub_components: [
                                                "Description",
                                                "class",
                                            ],
                                        },
                                    },
                                ),
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "cursor",
                                sub_components: [],
                            },
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "cursor",
                                            sub_components: [],
                                        },
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: Identifier {
                                                    component: "attlist",
                                                    sub_components: [
                                                        "cursor",
                                                    ],
                                                },
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: Identifier {
                                                    component: "SVG",
                                                    sub_components: [
                                                        "cursor",
                                                        "content",
                                                    ],
                                                },
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Definition(
                        Definition {
                            name: Identifier {
                                component: "attlist",
                                sub_components: [
                                    "cursor",
                                ],
                            },
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Core",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "Conditional",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "XLinkRequired",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "SVG",
                                                sub_components: [
                                                    "External",
                                                    "attrib",
                                                ],
                                            },
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "x",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "Coordinate",
                                                        sub_components: [
                                                            "datatype",
                                                        ],
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "y",
                                                        sub_components: [],
                                                    },
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: Identifier {
                                                        component: "Coordinate",
                                                        sub_components: [
                                                            "datatype",
                                                        ],
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
